Added blockquote to default layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,12 @@
         <header class="main-header">
             <div class="wc-container">
                 <h1><a href="{{ site.baseurl }}/">{{ site.harmony.name }}</a></h1>
-                <h2>{{ site.harmony.description }}</h2>
+                <blockquote>
+                    <p>
+                    {{ site.mainquote }}
+                    </p>
+                </blockquote>
+
                 {% include header-links.html %}                
             </div>
         </header>
