Adjusted header links

--- a/_includes/header-links.html
+++ b/_includes/header-links.html
@@ -3,7 +3,7 @@
 		<a href="{{ site.url }}/about/">About</a><span>/</span>
 	</li>
 	<li>
-		<a href="{{ site.url }}/blog/">Blog</a><span>/</span>
+		<a href="{{ site.baseurl }}/">Home</a><span>/</span>
 	</li>
 	{% if site.harmony.social.github %}
 	<li>
