Added temporary italics fix, removed block quote

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,16 +41,19 @@
                 s.parentNode.insertBefore(wf, s);
             })();
         </script>
+        <style type="text/css">
+            em { font-style: italic !important; }
+        </style>
     </head>
     <body class="{{ site.harmony.basetheme }}">
         <header class="main-header">
             <div class="wc-container">
                 <h1><a href="{{ site.baseurl }}/">{{ site.harmony.name }}</a></h1>
-                <blockquote>
+                <!--<blockquote>
                     <p>
                     {{ site.mainquote }}
                     </p>
-                </blockquote>
+                </blockquote>-->
 
                 {% include header-links.html %}                
             </div>
