Changed code block font-family

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -532,7 +532,7 @@ Code snippets
 
 --------------------------------- */
 code, pre {
-  font-family: Menlo, Monaco, "Courier New", monospace;
+  font-family:'Bitstream Vera Sans Mono','Courier', monospace;
 }
 code {  
   padding: .25em .5em;
