--- a/assets/css/_sass/_layout.scss
+++ b/assets/css/_sass/_layout.scss
@@ -29,3 +29,13 @@ $L:     1170px;
   width: 100% * $percentage;
   float: $float-direction;
 }
+
+/**
+ * Set `margin-bottom` to maintain vertical rhythm
+ */
+h1, h2, h3, h4, h5, h6,
+p, blockquote, pre,
+ul, ol, dl, figure,
+%vertical-rhythm {
+    margin-bottom: $spacing-unit / 2;
+}
