--- a/assets/css/_sass/_variables.scss
+++ b/assets/css/_sass/_variables.scss
@@ -24,7 +24,11 @@ $base-0D: #6d9cbe;
 $base-0E: #b6b3eb;
 $base-0F: #bc9458;
 
+$grey-color:       #828282;
+$grey-color-light: lighten($grey-color, 40%);
+$grey-color-dark:  darken($grey-color, 25%);
 
+$spacing-unit:     30px;
 
 // Fonts 
 $primary-font: 'Ubuntu Mono', sans-serif;
