--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -134,7 +134,8 @@ hr {
   height: 0;
 }
 
-strong { font-weight: 600; }
+strong, b { font-weight: 600; }
+em, i { font-style: italic; }
 
 /* --------------------------------
 
