--- a/assets/css/_sass/_syntax.scss
+++ b/assets/css/_sass/_syntax.scss
@@ -1,6 +1,6 @@
 /*** Pygments ***/
 .highlight{
-    //background-color: #073642;
+    font-family: $code-font;
     background-color: $base-00;
     color: #93a1a1;
     border: 1px solid #2d6472;
