--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -44,5 +44,9 @@ layout: default
 			{% endif %}
 		</div>
 	</div>
+
+	{% if page.comments != false %}
+	<div id="disqus_thread"></div>
+	{% endif %}
 </div>
  
