--- a/assets/css/_sass/_variables.scss
+++ b/assets/css/_sass/_variables.scss
@@ -3,7 +3,7 @@ $color-white: #FFF;
 $color-black: #000;
 
 $color-1: $color-white;
-$color-2: #515151;
+$color-2: $color-black; //#515151;
 
 // Color schemes for themes based on https://github.com/chriskempson/base16
 $base-00: #2b2b2b;
