--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,17 +41,6 @@
                 s.parentNode.insertBefore(wf, s);
             })();
         </script>
-        <script type="text/javascript">
-        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-        var disqus_shortname = 'dariusgitblog'; // required: replace example with your forum shortname
-
-        /* * * DON'T EDIT BELOW THIS LINE * * */
-        (function() {
-            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-        })();
-        </script>
     </head>
     <body class="{{ site.harmony.basetheme }}">
         <header class="main-header">
@@ -83,4 +72,14 @@
     <script>window.jQuery || document.write('<script src="{{ site.baseurl }}/assets/js/jquery.min.js"><\/script>')</script>
     <!-- Site js -->
     <script src="{{ site.baseurl }}/assets/js/all.js"></script>
+    <!-- Disquis commenting -->
+    <script type="text/javascript">
+        var disqus_shortname = 'dariusgitblog'; // required: replace example with your forum shortname
+
+        (function() {
+            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+        </script>
 </html>
