--- a/_includes/header-links.html
+++ b/_includes/header-links.html
@@ -3,6 +3,6 @@
 		<a href="{{ site.url }}/about/">About</a><span>/</span>
 	</li>
 	<li>
-		<a href="{{ site.baseurl }}/">Home</a><span>/</span>
+		<a href="{{ site.url }}/">Home</a><span>/</span>
 	</li>
 </ul>
